# rust-wasm-example

./: .gitignore  .ncurc.cjs  Cargo.toml  README.md  biome.json  lefthook.yaml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.json  vite.config.mts
.github/: dependabot.yml  zizmor.yml
.github/workflows/: build.yml  osv-scanner.yml  zizmor.yml
src/: lib.rs
www/: biome.json  index.html  index.js  index.ts  main.tsx  mandlbrot.tsx  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.mts  vite.config.ts  webpack.config.js
