[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Zenichi Amano <crow.misia@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.77", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[profile.release]
lto = true
codegen-units = 1
opt-level = 's'
